Wrote basic automated test.